--- a/ProductsService/src/main/resources/application.properties
+++ b/ProductsService/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+# will register with eureka server with this name.
 spring.application.name=ProductsService
+
+# address of the eureka server.
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
