test api gateway

--- a/ApiGateway/src/main/resources/application.properties
+++ b/ApiGateway/src/main/resources/application.properties
@@ -3,3 +3,7 @@ server.port=8082
 
 #Note that event the spring cloud api gateway is registered as an eureka client.
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+#allow the api gateway to automatically map services registered with eureka.
+spring.cloud.gateway.discovery.locator.enabled=true
+#use lowercase context paths for each service.
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
