configure multiple instances of products service to register with eureka

--- a/ProductsService/src/main/resources/application.properties
+++ b/ProductsService/src/main/resources/application.properties
@@ -1,5 +1,17 @@
-# will register with eureka server with this name.
+#Automatically select a random port during startup.
+#important when we plan to spin up multiple instances of this service.
+server.port=0
+
+#Will register with eureka server with this name.
 spring.application.name=ProductsService
 
-# address of the eureka server.
+#Address of the eureka server.
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+#If we have multiple instances of the same application,
+#we need to give them a different instance id, so that
+#eureka correctly identifies them as deliberate and new instances
+#of the same service. When we have multiple instances of same service,
+#application name wouldn't be sufficient to differentiate between two
+#instances.
+eureka.instance.instance-id=${spring.application.name}:${instanceId:${random.value}}
