--- a/ProductsService/src/main/resources/application.properties
+++ b/ProductsService/src/main/resources/application.properties
@@ -15,3 +15,12 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 #application name wouldn't be sufficient to differentiate between two
 #instances.
 eureka.instance.instance-id=${spring.application.name}:${instanceId:${random.value}}
+
+#H2 db setup.
+spring.datasource.url=jdbc:h2:file:~/products;AUTO_SERVER=true
+spring.datasource.username=root
+spring.datasource.password=sergey
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.enabled=true
